# firearm-safe-harbor-skid

./: .dockerignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/actions/deploy/: action.yml
.github/workflows/: pull_request.yml  push.yml  release.yml
data/: schema.csv
src/fsh/: config.py  main.py
src/fsh/secrets/: secrets.template.json
tests/: test_fsh.py
