[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsh"
dynamic = ["version"]
description = "A skid to manage firearm safe harbor storage locations in Utah."
readme = "README.md"
requires-python = "~=3.11.0"
license = { text = "MIT" }
authors = [{ name = "UGRC", email = "ugrc-developers@utah.gov" }]
keywords = ["gis"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Utilities",
]
dependencies = [
  "ugrc-palletjack==5.2.*",
  "ugrc-supervisor==3.2.*",
  "arcgis>=2.4.1.3",
  "pandas>=2.1.4",
  "google-auth>=2.40.3",
  "google-api-python-client>=2.179.0",
]

[project.optional-dependencies]
tests = [
  "pytest-cov==7.*",
  "pytest-instafail==0.5.*",
  "pytest-mock==3.*",
  "pytest-ruff==0.*",
  "pytest-watch==4.*",
  "pytest==8.*",
  "ruff==0.*",
]

[project.urls]
Homepage = "https://github.com/agrc/firearm-safe-harbor-skid"
"Issue Tracker" = "https://github.com/agrc/firearm-safe-harbor-skid/issues"

[project.scripts]
fsh = "fsh.main:process"

[tool.setuptools.dynamic]
version = { attr = "fsh.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*"]
[tool.ruff]
line-length = 120
lint.ignore = ["E501"]
[tool.pytest.ini_options]
addopts = "--ruff --cov-branch --cov=fsh --cov-report term --cov-report xml:cov.xml --instafail"
minversion = "6.0"
testpaths = ["tests", "src"]
norecursedirs = [".env", "data", "maps", ".github", ".vscode"]
console_output_style = "count"
